# comfyUI_SillyNodes

./: README.md  __init__.py  close_error_window_node.py  dummy_input.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
comfyUI_SillyNode/: README.md  boolean_jumper.py  queue_sequence.py  screenshots.py
comfyUI_SillyNode/example/: boolean_jumper.json  queueSequenceTest.json
