[project]
name = "comfyui_sillynodes"
description = "Using rgthree's fast_group_muter and bookmark nodes, introduce the pyautogui library to simulate clicks and hotkeys, and run groups in sequence. screen manipulation is involved"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["pyautogui", "keyboard"]

[project.urls]
Repository = "https://github.com/blueraincoatli/comfyUI_SillyNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "blueraincoatli"
DisplayName = "comfyUI_SillyNodes"
Icon = ""
